--- a/Routing/index.html
+++ b/Routing/index.html
@@ -2,13 +2,14 @@
 <html lang="en" ng-app="Blog">
     <head>
         <meta charset="UTF-8">
-        <script data-require="angular.js@*" data-semver="1.2.20" src="https://code.angularjs.org/1.2.20/angular.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
         <script data-require="angular-route@1.4.6" data-semver="1.2.14" src="https://code.angularjs.org/1.2.14/angular-route.js"></script>
 
         <!-- App - Modules -->
         <script src="app.js"></script>
         <!-- AboutMeController -->
-        <script src="controllers/AboutMeController.js"></script>
+        <script src="controllers/MyController.js"></script>
+        <script src="Components/team-list.component.js"></script>
     </head>
     <body>
 
